--- a/index.html
+++ b/index.html
@@ -943,8 +943,8 @@ border: solid 2px;
   <p>If when you click on 'Download JSON' a new page opens with your information coded, copy all of it, go back to the previous page, click on 'Send your JSON file...' and paste the contents of the information coded to the body of the email.</p>
 </details>
 
-<br><br>
-<button onclick="academicQuota()">Academic Quota test</button>
+<!--br><br>
+<button onclick="academicQuota()">Academic Quota test</button-->
 
   </details></fieldset><!-- Download -->
 </details><!-- Datasheet -->
