--- a/index.html
+++ b/index.html
@@ -1141,6 +1141,7 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <br>
 <br><a href="tel:520-533-2997">520-533-2997</a><label> - COVID Hotline</label>
 <br><a href="tel:520-538-6969">520-538-6969</a><label> - iWATCH (Report suspicious activity)</label>
+<br><a href="tel:1-800-225-5779">1-800-CALL-SPY</a><label> - (Report suspicious activity)</label>
 <br>
 <br><br>Medical:
 <br>    MISC (Military Intelligence Student Clinic): M-F 0430-1400
@@ -1402,23 +1403,23 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 <br><br>
 
 <br>Locations:
-<br><a href="https://maps.google.com/maps?q=31.563130,-110.313962" target="_blank">CIF</a>
-<br><a href="https://maps.google.com/maps?q=31.548841,-110.352132" target="_blank">Bliss</a>
-<br><a href="https://maps.google.com/maps?q=31.549320,-110.352721" target="_blank">Bliss (specialty clinics)</a>
-<br><a href="https://maps.google.com/maps?q=31.559215,-110.352962" target="_blank">Education center</a>
-<br><a href="https://maps.google.com/maps?q=31.557853,-110.355510" target="_blank">JAG</a>
-<br><a href="https://maps.google.com/maps?q=31.554168,-110.361205" target="_blank">Whitside Hall</a>
-<br><a href="https://maps.google.com/maps?q=31.549881,-110.368520" target="_blank">Mail (pickup)</a>
-<br><a href="https://maps.google.com/maps?q=31.550440,-110.368767" target="_blank">SFL-TAP</a>
-<br><a href="https://maps.google.com/maps?q=31.553448,-110.328368" target="_blank">TMAC</a>
-<br><a href="https://maps.google.com/maps?q=31.559242,-110.357346" target="_blank">Murr</a>
-<br><a href="https://maps.google.com/maps?q=31.556927,-110.358357" target="_blank">111th MI BDE</a>
-<br><a href="https://maps.google.com/maps?q=31.554725,-110.353461" target="_blank">Transportation/Housing</a>
-<br><a href="https://maps.google.com/maps?q=31.565838,-110.348074" target="_blank">O'Neil Hall</a>
-<br><a href="https://maps.google.com/maps?q=31.564004,-110.344256" target="_blank">Friedman Hall</a>
-<br><a href="https://maps.google.com/maps?q=31.563346,-110.346873" target="_blank">Davis Hall</a>
-<br><a href="https://maps.google.com/maps?q=31.561408,-110.345105" target="_blank">Goddard Hall</a>
-<br><a href="https://maps.google.com/maps?q=31.549915,-110.339767" target="_blank">Herrera Field</a>
+<br><br><a href="https://maps.google.com/maps?q=31.563130,-110.313962" target="_blank">CIF</a>
+<br><br><a href="https://maps.google.com/maps?q=31.548841,-110.352132" target="_blank">Bliss</a>
+<br><br><a href="https://maps.google.com/maps?q=31.549320,-110.352721" target="_blank">Bliss (specialty clinics)</a>
+<br><br><a href="https://maps.google.com/maps?q=31.559215,-110.352962" target="_blank">Education center</a>
+<br><br><a href="https://maps.google.com/maps?q=31.557853,-110.355510" target="_blank">JAG</a>
+<br><br><a href="https://maps.google.com/maps?q=31.554168,-110.361205" target="_blank">Whitside Hall</a>
+<br><br><a href="https://maps.google.com/maps?q=31.549881,-110.368520" target="_blank">Mail (pickup)</a>
+<br><br><a href="https://maps.google.com/maps?q=31.550440,-110.368767" target="_blank">SFL-TAP</a>
+<br><br><a href="https://maps.google.com/maps?q=31.553448,-110.328368" target="_blank">TMAC</a>
+<br><br><a href="https://maps.google.com/maps?q=31.559242,-110.357346" target="_blank">Murr</a>
+<br><br><a href="https://maps.google.com/maps?q=31.556927,-110.358357" target="_blank">111th MI BDE</a>
+<br><br><a href="https://maps.google.com/maps?q=31.554725,-110.353461" target="_blank">Transportation/Housing</a>
+<br><br><a href="https://maps.google.com/maps?q=31.565838,-110.348074" target="_blank">O'Neil Hall</a>
+<br><br><a href="https://maps.google.com/maps?q=31.564004,-110.344256" target="_blank">Friedman Hall</a>
+<br><br><a href="https://maps.google.com/maps?q=31.563346,-110.346873" target="_blank">Davis Hall</a>
+<br><br><a href="https://maps.google.com/maps?q=31.561408,-110.345105" target="_blank">Goddard Hall</a>
+<br><br><a href="https://maps.google.com/maps?q=31.549915,-110.339767" target="_blank">Herrera Field</a>
 
 
 
