--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@ border: solid 2px;
 
 
 <br>
-<fieldset><details open><summary>Info</summary>
+<fieldset><details open><summary>General Info</summary>
 
 <br>Sick Call (SC):
 <br>-Must have a new SC slip signed by DS
