--- a/index.html
+++ b/index.html
@@ -1109,8 +1109,10 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><a href="tel:520-538-6969">520-538-6969</a><label> - iWATCH (Report suspicious activity)</label>
 <br><a href="tel:1-800-225-5779">1-800-CALL-SPY</a><label> - (Report suspicious activity)</label>
 <br>
-<br><br>Medical:
-<br>    MISC (Military Intelligence Student Clinic): M-F 0430-1400
+<br>
+
+<fieldset><details open><summary>Medical:</summary>
+<br>MISC (Military Intelligence Student Clinic): M-F 0430-1400
 <br><a href="tel:520-533-6709">520-533-6709</a>
 <br><a href="tel:520-533-5970">520-533-5970</a>
 <br><a href="tel:520-538-0043">520-538-0043</a>
@@ -1141,27 +1143,89 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><a href="tel:520-533-5311">520-533-5311</a><label> - AWC (Army Wellness Center)</label>
 <br>
 
-<br><br>Counseling:
+</details></fieldset><!-- Medical -->
+
+<br>
+
+<fieldset><details open><summary>Counseling:</summary>
 <br><a href="tel:520-533-5161">520-533-5161</a><label> - Behavioral Health (BH)</label>
-<br>Chaplain (Confidential)
+
+<br><br>Mil. Family Life Consultant (MFLC) (Confidential)
+<br><a href="tel:520-255-4437">520-255-4437</a>
+<br><a href="tel:520-678-7178">520-678-7178</a>
+
+<br><br>Mil. Crisis Line
+<br><a href="tel:1-800-273-8255">1-800-273-8255</a>
+<br>Text: <a href="sms:838255">838255</a>
+
+<br><br>Military One Source (Confidential, 24/7)
+<br><a href="tel:1-800-342-9647">1-800-342-9647</a>
+<br><a href="tel:1-800-464-8107">1-800-464-8107</a>
+<br>
+
+<br>
+<br><a href="tel:1-866-495-6735">520-533-</a><label> - AZ Complete Health (24/7)</label>
+<br>TTY: <a href="sms:711">711</a>
+<br><a href="tel:1-866-780-9758">1-866-780-9758</a><label> - Alcoholic Anonymous</label>
+<br><a href="tel:520-459-0031">520-459-0031</a><label> - Alcoholic Anonymous Cochise County</label>
+<br><a href="tel:520-538-1311">520-538-1311</a><label> - Substance Abuse (ASAP)</label>
+<br><a href="tel:520-538-1315">520-538-1315</a><label> - Substance Abuse (ASAP)</label>
+
+<br><br>
+<fieldset><details><summary>On-Call Chaplain (Confidential)
+<br><a href="tel:520-533-2291">520-533-2291</a>
+<br><a href="tel:520-533-8774">520-533-8774</a>
+</summary>
+
+<br><br>309th, CPT Gaskin
+<br>
+
+<br>
+<br>Chapel Service
+<br>Confessions: by Appointment 
+<br>
+<br>1215 - Friday - Mail Post Chapel, Room 24 - Muslim
+<br>1830 - Friday - Prosser Chapel - Hospitality House
+
+<br>
+<br>1230 - Saturday - Prosser Chapel - Norse Pagan
+
+<br>
+<br>0800 - Sunday (every other) - Prosser Chapel - Jewish
+<br>0900 - Sunday - Main Post Chapel - Sunday mass
+<br>0930 - Sunday - Kino Chapel - Protestant Gospel/Worship  Service
+<br>0930 - Sunday - 305th MI BN Classroom - General Protestant, Contemporary AIT Service
+<br>1015-1200 - Sunday - Blessed Sacrament Chapel (Annex at Main Post Chapel) - Individual Prayer
+<br>1100 - Sunday - Main Post Chapel - Protestant Service
+<br>1300 - Sunday - Prosser Village Chapel Annex - Latter-Day Saints (LDS)
+<br>
+
+<br><a href="https://www.facebook.com/HuachucaHospitalityHouse" target="_blank">https://www.facebook.com/HuachucaHospitalityHouse</a>
+<br><a href="https://www.instagram.com/huachucahospitalityhouse" target="_blank">https://www.instagram.com/huachucahospitalityhouse</a>
 <br>
 
 
+<br>
+<br>If you need to talk with a chaplain, let a DS know so we can schedule your meeting/appointment. 
+<br>You DON'T need to disclose the reason you want to meet. 
+<br><br>
 
+</details></fieldset><!-- Chaplain -->
 
+</details></fieldset><!-- Counseling -->
 
+<br>
 
+<fieldset><details open><summary>Family:</summary>
 
-
-
-
-<br><br>Family:
-<br>Housing
+<br>
+<fieldset><details><summary>Housing
 <br><a href="tel:520-515-9000">520-515-9000</a>
 <br><a href="tel:520-533-3083">520-533-3083</a>
 <br><a href="https://www.mountainvistacommunities.com" target="_blank">https://www.mountainvistacommunities.com</a><label> - Housing Website</label>
-<fieldset><details><summary>Housing</summary>
-***IET are no longer allowed to move out of the barracks.***
+</summary>
+
+<br>***IET are no longer allowed to move out of the barracks.***
 <br><br>If you are married, your orders says Dependents: Yes, and your MOS is longer than 6 months (35T, 35G); you may move out of the Barracks.
 
 <br><br>Required documents:
@@ -1204,8 +1268,12 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><a href="tel:520-533-3686">520-533-3686</a>
 <br><a href="tel:520-533-2330">520-533-2330</a>
 
+</details></fieldset><!-- Family -->
 
-<br><br>Ride:
+<br>
+
+<fieldset><details open><summary>Ride:</summary>
+
 <br><a href="tel:520-439-0439">520-439-0439</a><label> - Huachuca Shuttle</label>
 <br><a href="tel:520-775-2448">520-775-2448</a><label> - Evelyn's Taxi</label>
 <br><a href="tel:520-439-8294">520-439-8294</a><label> - Two Tone Taxi</label>
@@ -1213,11 +1281,15 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><a href="tel:520-300-0000">520-300-0000</a><label> - Yellow Cab Tucson</label>
 <br><a href="tel:520-458-3330">520-458-3330</a><label> - AZ World Shuttle</label>
 
+</details></fieldset><!-- Ride -->
 
-<br><br><details id="SHARP"><summary>SHARP
+<br>
+
+<fieldset><details id="SHARP"><summary>SHARP
 <br><a href="tel:1-877-995-5247">1-877-995-5247</a><label> - DoD Safe Helpline (24/7)</label>
 <br><a href="tel:520-732-3736">520-732-3736</a><label> - Ft. Huachuca SH/SA Hotline (24/7)</label> 
-<br><a href="tel:520-538-5971">520-538-5971</a><label> - Garrison SARC/SHARP</label></summary>
+<br><a href="tel:520-538-5971">520-538-5971</a><label> - Garrison SARC/SHARP</label>
+</summary>
 
 <br><br>Give the DS a heads up (for accountability purposes, you don't need to disclose the reason), that you want to talk with the SARC or VA 
 <br><br>111th MI BDE SARC - SFC Pennington, Saquawia V.
@@ -1231,9 +1303,18 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br>
 <br><a href="https://www.instagram.com/rapid_bde" target="_blank">https://www.instagram.com/rapid_bde</a>
 <br>
-</details>
 
-<br><br>Facilities:
+<br><br>309th MI BN On-Call VA
+<br><a href="tel:520-255-5133">520-255-5133</a>
+<br><a href="tel:520-533-4748">520-533-4748</a>
+<br><a href="tel:520-533-1278">520-533-1278</a>
+
+</details></fieldset><!-- SHARP -->
+
+<br>
+
+<fieldset><details open><summary>Facilities:</summary>
+
 <br><details id="DEERS"><summary><a href="tel:520-533-1608">520-533-1608</a> - DEERS</summary>
 <br><a href="https://www.tricare.mil/Plans/Eligibility/DEERS/RequiredDocuments">Required Documents to enroll dependents (spouse, child, fam. members, etc.) - Tricare</a>
 <br><a href="https://home.army.mil/huachuca/index.php/about/Garrison/directorate-human-resources/military-personnel-division/deersid-cards">More dependent related info - DEERS-Huachuca</a>
@@ -1305,10 +1386,12 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><a href="tel:520-538-8649">520-538-8649</a><label> - Army Volunteer Corps (AVC)</label>
 <br><a href="tel:1-877-272-7337">1-877-272-7337</a><label> - Red Cross - Emergencies</label>
 
+</details></fieldset><!-- Facilities -->
 
+<br>
 
+<fieldset><details open><summary>Law:</summary>
 
-<br><br>Law:
 <br><a href="tel:520-533-2291">520-533-2291</a><label> - IOC (After hrs Emergencies)</label>
 <br><a href="tel:520-533-3000">520-533-3000</a><label> - Military Police (MP)</label>
 <br><a href="tel:520-533-2628">520-533-2628</a><label> - Criminal Investigation Division (CID)</label>
@@ -1324,71 +1407,10 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><a href="tel:520-533-1670">520-533-1670</a>
 <br><a href="tel:520-533-8895">520-533-8895</a>
 
-<br><br>309th MI BN On-Call VA
-<br><a href="tel:520-255-5133">520-255-5133</a>
-<br><a href="tel:520-533-4748">520-533-4748</a>
-<br><a href="tel:520-533-1278">520-533-1278</a>
-
-<br><br>Mil. Family Life Consultant (MFLC) (Confidential)
-<br><a href="tel:520-255-4437">520-255-4437</a>
-<br><a href="tel:520-678-7178">520-678-7178</a>
-
-<br><br>Mil. Crisis Line
-<br><a href="tel:1-800-273-8255">1-800-273-8255</a>
-<br>Text: <a href="sms:838255">838255</a>
-
-<br><br>Military One Source (Confidential, 24/7)
-<br><a href="tel:1-800-342-9647">1-800-342-9647</a>
-<br><a href="tel:1-800-464-8107">1-800-464-8107</a>
-<br>
+</details></fieldset><!-- Law -->
 
 <br>
-<br><a href="tel:1-866-495-6735">520-533-</a><label> - AZ Complete Health (24/7)</label>
-<br>TTY: <a href="sms:711">711</a>
-<br><a href="tel:1-866-780-9758">1-866-780-9758</a><label> - Alcoholic Anonymous</label>
-<br><a href="tel:520-459-0031">520-459-0031</a><label> - Alcoholic Anonymous Cochise County</label>
-<br><a href="tel:520-538-1311">520-538-1311</a><label> - Substance Abuse (ASAP)</label>
-<br><a href="tel:520-538-1315">520-538-1315</a><label> - Substance Abuse (ASAP)</label>
 
-
-
-<br><a href="tel:520-533-">520-533-</a><label> - </label>
-
-
-<br>
-<br>Chapel Service
-<br>Confessions: by Appointment 
-<br>
-<br>1215 - Friday - Mail Post Chapel, Room 24 - Muslim
-<br>1830 - Friday - Prosser Chapel - Hospitality House
-
-<br>
-<br>1230 - Saturday - Prosser Chapel - Norse Pagan
-
-<br>
-<br>0800 - Sunday (every other) - Prosser Chapel - Jewish
-<br>0900 - Sunday - Main Post Chapel - Sunday mass
-<br>0930 - Sunday - Kino Chapel - Protestant Gospel/Worship  Service
-<br>0930 - Sunday - 305th MI BN Classroom - General Protestant, Contemporary AIT Service
-<br>1015-1200 - Sunday - Blessed Sacrament Chapel (Annex at Main Post Chapel) - Individual Prayer
-<br>1100 - Sunday - Main Post Chapel - Protestant Service
-<br>1300 - Sunday - Prosser Village Chapel Annex - Latter-Day Saints (LDS)
-<br>
-
-<br><a href="https://www.facebook.com/HuachucaHospitalityHouse" target="_blank">https://www.facebook.com/HuachucaHospitalityHouse</a>
-<br><a href="https://www.instagram.com/huachucahospitalityhouse" target="_blank">https://www.instagram.com/huachucahospitalityhouse</a>
-<br>
-
-
-<br>
-<br>If you need to talk with a chaplain, let a DS know so we can schedule your meeting/appointment. 
-<br>You DON'T need to disclose the reason you want to meet. 
-<br><br>
-<br>309th, CPT Gaskin
-<br>
-<br>On-Call Chaplain (Confidential)
-<br><a href="tel:520-533-2291">520-533-2291</a>
-<br><a href="tel:520-533-8774">520-533-8774</a>
 
 
 <br><br>
