--- a/index.html
+++ b/index.html
@@ -1369,10 +1369,11 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><a href="tel:520-533-2009">520-533-2009</a>
 <br><a href="tel:520-533-3208">520-533-3208</a>
 
-<br><br><details id="Finance"><summary>Finance
+<br><br><details id="Finance" open><summary>Finance
 <br><a href="tel:520-538-5762">520-538-5762</a>
-<br><a href="tel:520-538-2982">520-538-2982</a></summary>
-<a href="https://mypay.dfas.mil/" target="_blank">myPay - LES, TSP, W2</a>
+<br><a href="tel:520-538-2982">520-538-2982</a>
+<br>Website: <a href="https://mypay.dfas.mil/" target="_blank">myPay - LES, TSP, W2</a>
+</summary>
 </details>
 <br><br>ACS:
 <br><a href="tel:520-533-2330">520-533-2330</a>
