--- a/index.html
+++ b/index.html
@@ -1222,10 +1222,12 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <fieldset><details><summary>Housing
 <br><a href="tel:520-515-9000">520-515-9000</a>
 <br><a href="tel:520-533-3083">520-533-3083</a>
-<br><a href="https://www.mountainvistacommunities.com" target="_blank">https://www.mountainvistacommunities.com</a><label> - Housing Website</label>
+<br>Website: <a href="https://www.mountainvistacommunities.com" target="_blank">https://www.mountainvistacommunities.com</a>
 </summary>
 
 <br>***IET are no longer allowed to move out of the barracks.***
+<br><a href="https://drive.google.com/file/d/1oL1BN-Koacg3zCcH4wigo82iv4_eyfft/view?usp=drivesdk" target="_blank">Memo explaining why IET can't move out.</a>
+
 <br><br>If you are married, your orders says Dependents: Yes, and your MOS is longer than 6 months (35T, 35G); you may move out of the Barracks.
 
 <br><br>Required documents:
@@ -1365,20 +1367,21 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 
 <br><br>
 
-<br><br>JAG
+<br><br>JAG (Legal) - Judge Advocate General's
 <br><a href="tel:520-533-2009">520-533-2009</a>
 <br><a href="tel:520-533-3208">520-533-3208</a>
+<br>Website: <a href="https://www.jagcnet.army.mil/" target="_blank">https://www.jagcnet.army.mil/</a>
 
 <br><br><details id="Finance" open><summary>Finance
 <br><a href="tel:520-538-5762">520-538-5762</a>
 <br><a href="tel:520-538-2982">520-538-2982</a>
-<br>Website: <a href="https://mypay.dfas.mil/" target="_blank">myPay - LES, TSP, W2</a>
+<br>Website: <a href="https://mypay.dfas.mil/" target="_blank">https://mypay.dfas.mil/</a> - LES, TSP, W2
 </summary>
 </details>
-<br><br>ACS:
+<br><br>ACS (Army Community Services):
 <br><a href="tel:520-533-2330">520-533-2330</a>
 
-<br><br>AER
+<br><br>AER:
 <br><a href="tel:520-533-5312">520-533-5312</a>
 <br><a href="tel:1-877-272-7337">1-877-272-7337</a>
 
