--- a/index.html
+++ b/index.html
@@ -1415,6 +1415,111 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 
 <br>
 
+<fieldset><details open><summary>Links:</summary>
+
+<br>ERB/SRB:
+<br><a href="https://myerb.ahrs.army.mil/soldierLogin.do" target="_blank">https://myerb.ahrs.army.mil/soldierLogin.do</a>
+<br>NG: <a href="https://arngg1.ngb.army.mil/SelfService/CareerCenter/Home.aspx" target="_blank">https://arngg1.ngb.army.mil/SelfService/CareerCenter/Home.aspx</a>
+<br>NG: <a href="https://arngg1.ngb.army.mil/SelfService/CareerCenter" target="_blank">https://arngg1.ngb.army.mil/SelfService/CareerCenter</a>
+
+<br>
+<br>MEDPROS
+<br><a href="https://medpros.mods.army.mil/portal/" target="_blank">https://medpros.mods.army.mil/portal/</a>
+
+<br>
+<br>iPERMS - Your military digital record file
+<br><a href="https://iperms.hrc.army.mil/login/" target="_blank">https://iperms.hrc.army.mil/login/</a>
+
+<br>
+<br>DD1172
+<br><a href="https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1" target="_blank">https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1</a>
+<br><a href="https://www.dmdc.osd.mil/self_service" target="_blank">https://www.dmdc.osd.mil/self_service</a>
+<br>-> Print Family List
+
+<br>
+<br>Phasing
+<br>Soldier's Creed: <a href="https://www.army.mil/values/soldiers.html
+" target="_blank">https://www.army.mil/values/soldiers.html
+</a>
+<br>Army Song: <a href="https://www.army.mil/values/song.html" target="_blank">https://www.army.mil/values/song.html</a>
+
+<br>
+<br>IntelInk
+<br><a href="https://www.intelink.gov/" target="_blank">https://www.intelink.gov/</a>
+
+<br>
+<br>IntelDocs
+<br><a href="https://inteldocs.intelink.gov/inteldocs/" target="_blank">https://inteldocs.intelink.gov/inteldocs/</a>
+
+<br>
+<br>ALMS
+<br><a href="https://www.lms.army.mil/" target="_blank">https://www.lms.army.mil/</a>
+
+<br>
+<br>HHG setup
+<br><a href="https://eta.sddc.army.mil/ETASSOPortal/Default.aspx" target="_blank">https://eta.sddc.army.mil/ETASSOPortal/Default.aspx</a>
+
+<br>
+<br>DoD Cyber Awareness Challenge
+<br><a href="https://cs.signal.army.mil/" target="_blank">https://cs.signal.army.mil/</a>
+<br>or
+<br><a href="https://jkodirect.jten.mil" target="_blank">https://jkodirect.jten.mil</a>
+<br>--Course #: DOD-US1364-20 || Course: "Department of Defense (DoD) Cyber Awareness Challenge 2020 (1 hr.)"
+<br>
+<br>Your certificate must have a signature
+
+<br>
+<br>DoD AUP
+<br><a href="https://cs.signal.army.mil/" target="_blank">https://cs.signal.army.mil/</a>
+
+<br>
+<br>ATCTS
+<br><a href="https://atc.us.army.mil/iastar/index.php" target="_blank">https://atc.us.army.mil/iastar/index.php</a>
+<br>
+<br><a href="https://drive.google.com/file/d/1L2KjHG7oy2zVgDKNHl7Pb-TSacXPyNIa/view?usp=sharing" target="_blank">--How to Upload the AUP and Cyber cert</a>
+
+
+<br>
+<br>ATRRS
+<br><a href="https://www.atrrs.army.mil/atrrscc/course.aspx?newsearch=true" target="_blank">https://www.atrrs.army.mil/atrrscc/course.aspx?newsearch=true</a>
+<br>--Course #: 2G-F97_DL || Course: "Risk Management Basic Course"
+
+<br>
+<br>JKO
+<br><a href="https://jkodirect.jten.mil" target="_blank">https://jkodirect.jten.mil</a>
+<br>--Course #: JS-US013 || Course: Joint Staff Equal Opportunity Policy Basic Training - (1 hr.)
+
+<br>
+<br>Army Career Tracker (ACT)
+<br><a href="https://actnow.army.mil/" target="_blank">https://actnow.army.mil/</a>
+
+
+
+<br>
+<br>Activate PIV - Enable CAC Authentication cert
+<br><a href="https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1" target="_blank">https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1</a>
+<br><a href="https://www.dmdc.osd.mil/self_service" target="_blank">https://www.dmdc.osd.mil/self_service</a>
+<br>
+<br><a href="https://www.militarycac.com/PIV.htm" target="_blank">https://www.militarycac.com/PIV.htm</a>
+
+<br>
+<br>MilitaryCAC - Enable CAC reader on your PC
+<br><a href="https://militarycac.com/" target="_blank">https://militarycac.com/</a>
+
+<br>
+<br>Promotion - list, points
+<br><a href="https://www.hrc.army.mil/TAGD/ENLISTED%20PROMOTIONS" target="_blank">https://www.hrc.army.mil/TAGD/ENLISTED%20PROMOTIONS</a>
+<br>--Junior Enlisted Promotions
+<br>--JR Enlisted Cutoff & By-Name Promotion List
+<br>----Cutoff Scores - points by MOS
+<br>----By-Names - who got promoted (effective the following month)
+
+<br>
+<br>Promotion Point Worksheet (PPW) - Calculate promotion points
+<br><a href="https://www.hrcapps.army.mil/PPW/" target="_blank">https://www.hrcapps.army.mil/PPW/</a>
+
+
+</details></fieldset><!-- Links -->
 
 
 <br><br>
