--- a/index.html
+++ b/index.html
@@ -1153,6 +1153,7 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><br>Mil. Family Life Consultant (MFLC) (Confidential)
 <br><a href="tel:520-255-4437">520-255-4437</a>
 <br><a href="tel:520-678-7178">520-678-7178</a>
+<br><a href="tel:520-254-7200">520-254-7200</a> - Ms. Toothman @ Prosser Chapel Annex
 
 <br><br>Mil. Crisis Line
 <br><a href="tel:1-800-273-8255">1-800-273-8255</a>
