--- a/index.html
+++ b/index.html
@@ -1057,10 +1057,23 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br>
 </details></fieldset>
 <br>
+
+<details open><summary>PT</summary>
+
+<br><a href="https://armypubs.army.mil/ProductMaps/PubForm/Details.aspx?PUB_ID=1020967" target="_blank">ATP 7-22.02</a> - Exercises
+<br><a href="https://armypubs.army.mil/ProductMaps/PubForm/Details.aspx?PUB_ID=1020966" target="_blank">ATP 7-22.01</a> - Testing
+<br><a href="https://armypubs.army.mil/ProductMaps/PubForm/Details.aspx?PUB_ID=1020968" target="_blank">FM 7-22</a>
+<br><a href="https://armypubs.army.mil" target="_blank">https://armypubs.army.mil</a> - Army Publications
+
+<br>
+</details></fieldset>
+<br>
+
 <details open><summary>Ft. Huachuca</summary>
 <br>
 
-<br><a href="https://home.army.mil/huachuca/index.php" target="_blank">Fort Huachuca official web page (General Orders & Policies)</a>
+<br><a href="https://home.army.mil/huachuca/index.php" target="_blank">https://home.army.mil/huachuca/index.php</a>
+<br>Fort Huachuca official web page (General Orders & Policies)
 <br>
 
 <br><a href="https://www.facebook.com/FMWRFortHuachuca/" target="_blank">Fort Huachuca MWR - Facebook page</a>
@@ -1452,6 +1465,10 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 " target="_blank">https://www.army.mil/values/soldiers.html
 </a>
 <br>Army Song: <a href="https://www.army.mil/values/song.html" target="_blank">https://www.army.mil/values/song.html</a>
+
+<br>
+<br>Army Publications
+<br><a href="https://armypubs.army.mil/" target="_blank">https://armypubs.army.mil/</a>
 
 <br>
 <br>IntelInk
