--- a/index.html
+++ b/index.html
@@ -1058,18 +1058,23 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 </details></fieldset>
 <br>
 
-<details open><summary>PT</summary>
+<fieldset><details open><summary>PT</summary>
 
 <br><a href="https://armypubs.army.mil/ProductMaps/PubForm/Details.aspx?PUB_ID=1020967" target="_blank">ATP 7-22.02</a> - Exercises
 <br><a href="https://armypubs.army.mil/ProductMaps/PubForm/Details.aspx?PUB_ID=1020966" target="_blank">ATP 7-22.01</a> - Testing
 <br><a href="https://armypubs.army.mil/ProductMaps/PubForm/Details.aspx?PUB_ID=1020968" target="_blank">FM 7-22</a>
+
+<br>
+<br><a href="https://drive.google.com/file/d/1E6papx8j58UPJEZpCLgE9Fi-x7SS2tBE/view?usp=drivesdk">FM 7-22 (2012)</a> - Previous Exercises
+
+<br>
 <br><a href="https://armypubs.army.mil" target="_blank">https://armypubs.army.mil</a> - Army Publications
 
 <br>
 </details></fieldset>
 <br>
 
-<details open><summary>Ft. Huachuca</summary>
+<fieldset><details open><summary>Ft. Huachuca</summary>
 <br>
 
 <br><a href="https://home.army.mil/huachuca/index.php" target="_blank">https://home.army.mil/huachuca/index.php</a>
@@ -1572,7 +1577,7 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 
 
 
-</details><!-- Ft Huachuca -->
+</details></fieldset><!-- Ft Huachuca -->
 
 
 <br><br>
