--- a/index.html
+++ b/index.html
@@ -1074,6 +1074,38 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 </details></fieldset>
 <br>
 
+<fieldset><details open><summary>Volunteer:</summary>
+
+<br><a href="https://vmis.armyfamilywebportal.com" target="_blank">https://vmis.armyfamilywebportal.com</a>
+<br>-Register
+<br>--you can use your personal email.
+
+<br>
+<br><a href="https://www.armyfamilywebportal.com/cas" target="_blank">https://www.armyfamilywebportal.com/cas</a>
+<br>-Login
+<br>--If you are not in the Volunteer Management Information System (VMIS) [it'll be shown on the top of the page], click the 3 horizontal bars at the top left and choose it.
+
+<br>--don't forget to go to your profile and update your information.
+
+<br>
+<br>Military community: Fort Huachuca
+<br>Branch: Army
+<br>Component: ...
+<br>Disposition: Service Member
+<br>Rank: ...
+
+<br>
+<br>Go to the Dashboard > Opportunities > Student Volunteer (make sure the organization is 111th Holds Company) > Apply (and wait to be accepted)
+<br>then you should be able to log your hours.
+
+<br>
+<br><a href="https://myarmyonesource.com" target="_blank">https://myarmyonesource.com</a>
+
+
+<br>
+</details></fieldset>
+<br>
+
 <fieldset><details open><summary>Ft. Huachuca</summary>
 <br>
 
