--- a/index.html
+++ b/index.html
@@ -1551,6 +1551,10 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><a href="https://iperms.hrc.army.mil/login/" target="_blank">https://iperms.hrc.army.mil/login/</a>
 
 <br>
+<br>Clothing Records
+<br><a href="https://ism.army.mil/ism/SelfServiceServlet?nav.nav_id=ssMyClothing" target="_blank">https://ism.army.mil/ism/SelfServiceServlet?nav.nav_id=ssMyClothing</a>
+
+<br>
 <br>DD1172
 <br><a href="https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1" target="_blank">https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1</a>
 <br><a href="https://www.dmdc.osd.mil/self_service" target="_blank">https://www.dmdc.osd.mil/self_service</a>
