--- a/index.html
+++ b/index.html
@@ -1477,7 +1477,8 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 
 <br>
 
-<fieldset><details open><summary>Soldier & Family Readiness Center (SFRC)/Army Community Service(ACS):</summary>
+<fieldset><details open><summary>Soldier & Family Readiness Center (SFRC)
+<br>Army Community Service (ACS):</summary>
 
 <br><a href="tel:520-533-2330">520-533-2330</a>
 <br>0800-1630 - Mo-We, Fr
