--- a/index.html
+++ b/index.html
@@ -1246,8 +1246,8 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 
 <br>
 <br>0800 - Sunday (every other) - Prosser Chapel - Jewish
-<br>0900 - Sunday - Main Post Chapel - Sunday mass
-<br>0930 - Sunday - Kino Chapel - Protestant Gospel/Worship  Service
+<br>0900 - Sunday - Kino Chapel - Protestant Gospel/Worship  Service
+<br>0930 - Sunday - Main Post Chapel - Sunday mass
 <br>0930 - Sunday - 305th MI BN Classroom - General Protestant, Contemporary AIT Service
 <br>1015-1200 - Sunday - Blessed Sacrament Chapel (Annex at Main Post Chapel) - Individual Prayer
 <br>1100 - Sunday - Main Post Chapel - Protestant Service
@@ -1507,8 +1507,34 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br>-A three tiered mandatory enrollment program (ACS / Medical / HRC) to provide a safety net for families with Special Needs (physical, intellectual,  or emotional disabilities).
 <br>
 
-<br><a href="tel:520-533-">520-533-</a> - 
-<br>-
+<br><a href="tel:520-533-2330">520-533-2330</a> - Family Advocacy Program (FAP)
+<br>-Preserves Family wellness through prevention (awareness, education and support).
+<br>Includes:
+<br><a href="tel:520-533-2993">520-533-2993</a> - Domestic Violence Program / Victim Advocacy / New Parent Support Program
+<br><a href="tel:520-508-2772">520-508-2772</a> - Domestic Violence 24/7 Hotline
+<br><a href="tel:520-533-3986">520-533-3986</a> - New Parent Support Program
+<br><a href="tel:520-533-3686">520-533-3686</a> - New Parent Support Program Nurse
+<br><a href="tel:571-414-1922">571-414-1922</a> - New Parent Support Program Nurse (cell)
+<br>
+
+<br><a href="tel:520-533-2967">520-533-2967</a> - Financial Readiness Program
+<br>-Provides education and support for financial issues or budgeting.
+<br>
+
+<br><a href="tel:520-255-4273">520-255-4273</a> - Military & Family Life Counselor (MFLC) Program
+<br>-Provides short term, situational, problem solving and <b>confidential</b> counseling services to Service Members (SM) and Families.
+<br>
+
+<br><a href="tel:520-538-1284">520-538-1284</a> - Substance Abuse Prevention Coordinator and Employee Assistance Program (EAP)
+<br>-Provides education and training for all Soldiers, Family Members, and Civilian professionals associated with Ft. Huachuca.
+<br>
+
+<br><a href="tel:520-533-5919">520-533-5919</a> - Relocation Readiness Program (RRP)
+<br>-Eases the burden of moving with welcome packets, Lending Locker, and various resources.
+<br>
+
+<br><a href="tel:520-533-0282">520-533-0282</a> - Risk Reduction Program
+<br>-Analyses, assesses, and recommends solutions designed to decrease Soldier's high risk behaviors and increase mission readiness.
 <br>
 
 <br><a href="tel:520-533-">520-533-</a> - 
@@ -1523,13 +1549,6 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br>-
 <br>
 
-<br><a href="tel:520-533-">520-533-</a> - 
-<br>-
-<br>
-
-<br><a href="tel:520-533-">520-533-</a> - 
-<br>-
-<br>
 
 
 </details></fieldset><!-- Soldier & Family Readiness Center (SFRC) -->
