--- a/index.html
+++ b/index.html
@@ -1227,12 +1227,17 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 
 <br><br>
 <fieldset><details><summary>On-Call Chaplain (Confidential)
+<br><a href="tel:520-508-8042">520-508-8042</a>
 <br><a href="tel:520-533-2291">520-533-2291</a>
 <br><a href="tel:520-533-8774">520-533-8774</a>
 </summary>
 
-<br><br>309th, CPT Gaskin
 <br>
+<br>305th - CPT Uregan, Chris
+<br>309th - CPT Gaskin, Grant
+<br>BDE - MAJ Williams, Jameson
+<br>
+
 
 <br>
 <br>Chapel Service
@@ -1257,6 +1262,12 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><a href="https://www.facebook.com/HuachucaHospitalityHouse" target="_blank">https://www.facebook.com/HuachucaHospitalityHouse</a>
 <br><a href="https://www.instagram.com/huachucahospitalityhouse" target="_blank">https://www.instagram.com/huachucahospitalityhouse</a>
 <br>
+
+<br><a href="tel:757-620-4677">757-620-4677</a> - Jose (& Whitney) - Hospitality House
+<br>
+<br>
+
+
 
 
 <br>
