--- a/index.html
+++ b/index.html
@@ -1424,7 +1424,7 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><br><a href="tel:520-533-1144">520-533-1144</a><label> - IG (Inspector General)</label>
 <br>Hours: M, Tu, W, F: 0830-1630; Th: 1330-1630
 <br><a href="mailto:usarmy.huachuca.icoe.mbx.inspector-general@mail.mil">usarmy.huachuca.icoe.mbx.inspector-general@mail.mil</a>
-<br><a href="https://www.ikn.army.mil/apps/IKNHostedWebsites/IG" target="_blank">IG Website</a>
+<br>Website: <a href="https://www.ikn.army.mil/apps/IKNHostedWebsites/IG" target="_blank">https://www.ikn.army.mil/apps/IKNHostedWebsites/IG</a>
 <br>Services: Violations of Regulations/Policy,
 <br>reach to the agencies to get the right processes (to get BAH, FSA, correct pay, etc),
 <br>entitlements, reprisal
@@ -1548,19 +1548,16 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br>-Analyses, assesses, and recommends solutions designed to decrease Soldier's high risk behaviors and increase mission readiness.
 <br>
 
-<br><a href="tel:520-533-">520-533-</a> - 
-<br>-
+<br><a href="tel:520-538-1313">520-538-1313</a> - Suicide Prevention Program
+<br>-Manages the overall suicide prevention program for all Soldiers, Family Members, and Civilian professionals associated with Ft. Huachuca.
 <br>
 
-<br><a href="tel:520-533-">520-533-</a> - 
-<br>-
+<br><a href="tel:1-800-273-8255">1-800-273-8255</a> - National Suicide Prevention Lifeline
 <br>
 
-<br><a href="tel:520-533-">520-533-</a> - 
-<br>-
+<br><a href="tel:520-533-6879">520-533-6879</a> - Survivor Outreach Services (SOS)
+<br>-A muli-agency approach to delivering services to survivors.
 <br>
-
-
 
 </details></fieldset><!-- Soldier & Family Readiness Center (SFRC) -->
 
